--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,11 +82,11 @@
           <label for="toggle" class="toggle" onclick></label>
           <ul class="menu">
             <li><a class="
-              {% if page.url == '/about.html' %}
+              {% if page.url == '/about/' %}
               selected
-              {% endif %} menu-about" href="{{ base_path }}/about.html">소개</a></li>
+              {% endif %} menu-about" href="{{ base_path }}/about">소개</a></li>
             <li><a class="
-              {% if page.url != '/about.html' and page.url != '/jobs.html' %}
+              {% if page.url != '/about/' and page.url != '/jobs.html' %}
               selected
               {% endif %} menu-blog" href="{{ base_path }}/index.html">블로그</a></li>
             <li><a class="menu-github" href="https://github.com/sungkwangsong">GitHub</a></li>
@@ -100,15 +100,6 @@
         </div>
       </div>
     </div>
-    <!--<div class="hiring-banner">
-      <div class="hiring-fixedwidth-wrap">
-        <div class="hiring-content">
-          <h2 class="hiring-title">당신과 함께<br> 일하고 싶습니다.</h2>
-          <div class="hiring-subtitle">스포카에서 배우고 성장하면서, <br>서비스와 제품을 함께 만들어 나갈 <br>크리에이터를 모집합니다.</div>
-          <a class="btn-job" type="button" href="{{ base_path }}/jobs.html">채용 공고 보기</a>
-        </div>
-      </div>
-    </div>-->
     <div class="content">
       {{ content }}
     </div>
@@ -116,8 +107,7 @@
     </div>
     <div class="footer">
       <div id="info">
-        <span>© <a href="http://dodopoint.com/">Spoqa</a> Inc. All rights reserved.</span>
-        <span>Powered by <a href="https://pages.github.com/">GitHub Pages</a>.</span>
+        <span>Powered by <a href="https://pages.github.com/">GitHub Pages</a> using <a href="https://spoqa.github.io/">Spoqa</a> theme</span>
       </div>
     </div>
   </div>
