--- a/css/reset/reset.scss
+++ b/css/reset/reset.scss
@@ -61,8 +61,8 @@ body {
   background-color: #fff;
   width: 100%;
   height: 100%;
-  // font-family: "spoqahansans", "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif;
-  font-family: "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif;
+  font-family: "spoqahansans", "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif;
+  // font-family: "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif;
   color: $text-color;
   word-break: keep-all;
   -webkit-font-smoothing: antialiased;
