update webfont endpoint

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,8 @@
             // families: ['spoqahansans:100,400,700'],
             // urls: ['/css/spoqahansans.css']
             families: ['Spoqa Han Sans:100,300, 400,700'],
-            urls: ['https://d24uop4wk69tt0.cloudfront.net/css/SpoqaHanSans-kr.css']
+            urls: ['https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css']
+            // urls: ['https://d24uop4wk69tt0.cloudfront.net/css/SpoqaHanSans-kr.css']
         },
         timeout: 60000
     };
