--- a/_layouts/entry.html
+++ b/_layouts/entry.html
@@ -36,7 +36,7 @@ layout: default
 </div>
 <script>
 // document.addEventListener("DOMContentLoaded", function(event) {
-    $('.fb-like, .fb-comments').attr('data-width', "100%");
+    // $('.fb-like, .fb-comments').attr('data-width', "100%");
     (function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
